# trio-ircproxy

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  pyproject.toml  pyvenv.cfg  pyvenvex.py  reflective development.txt  requirements.txt  runall.bat  runproxy.bat  runweb - Copy.bat  styleguide.html  trio-ircproxy.py  web.bat
.github/: FUNDING.yml
scripts/: mIRC_Load_This_First.mrc  requirements.txt
scripts/flask_website/: __init__.py  auth.py  circular.py  cwd_flask.py  flask_app.py  home.json  testing_db.py  views.py
scripts/flask_website/app/: network.json
scripts/flask_website/templates/: admin_settings.html  base.html  forgot-no-accounts.html  forgot.html  login.html
scripts/flask_website/website/: __init__.py  auth.py  cert.pem  cwd_flask.py  help_dir.py  key.pem  models.py  system_data.py-UNKNOWN.py  views.py
scripts/mirc-bauderr-old/: baud_common.mrc  baud_load_this_Last.mrc  baud_pop_menus.mrc  baud_pop_menus_2.mrc  baud_proxy_server.mrc  baud_raw_events.mrc  popups.ini
scripts/mirc_mg_bauderr/: aliases.mrc  history.bak  history.mrc  new-menus.bak  new-menus.mrc  no-category.bak  no-category.mrc  popups.bak  popups.ini  script1.bak  script1.mrc  script2.mrc  vars.bak  vars.mrc
scripts/trio_ircproxy/: circular.py  ial.py  proxy_commands.py  xdcc_link.py  xdcc_system.py
scripts/website_and_proxy/: email_send.py  home.json  json_data.py  random_name.txt  socket_data.py  system_data.py  user_db.py  users.py
scripts/www/: __init__.py  flask_app.py  www-server-config.ini
(+60 files in other folders)
